# SimpleProj

./: CMakeLists.txt  myprogram.cpp  program.cpp
myprogram.dSYM/Contents/Resources/DWARF/: myprogram
